--- a/index.html
+++ b/index.html
@@ -6,44 +6,24 @@
     <title>Kanji recognition</title>
 
     <link rel='stylesheet' type='text/css' href='style.css'>
-
-    <script id="result-template" type="text/x-custom-template">
-        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-                <!-- <img src="..." class="round mr-2" alt="..."> -->
-                <strong class="mr-auto">Result</strong>
-                <small>x mins ago</small>
-                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                    <span aria-hidden="true">&time;</span>
-                </button>
-            </div>
-            <div class="toast-body">
-                result_message_here
-            </div>
-        </div>
-    </script>
 </head>
 
 <body>
     <canvas id="canvas" width="64" height="64"></canvas>
     <div id="ui-container">
-        <button type="button" class="btn btn-danger col-12" id="clear" onclick="clearCanvas()">CLEAR</button>
-        <!-- <button type="button" class="btn btn-success col-12" id="save">SAVE</button> -->
-        <button type="button" class="btn btn-success col-12" id="predict" onclick="predict()">PREDICT</button>
+        <button type="button" class="btn btn-danger col-12" id="clear">CLEAR</button>
+        <button type="button" class="btn btn-success col-12" id="predict">PREDICT</button>
     </div>
-    <div id="result-container">
+    <div id="results-container">
     </div>
 
     <!-- place all the scripts right before the body closing tag allows them to execute after the document has been loaded -->
     <!-- and we don't have to place our DOM selecting code inside window.onload -->
-    <!-- Improt TensorFlow.js -->
+    <!-- Import TensorFlow.js -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
     <!-- Import tfjs-vis -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.0.2/dist/tfjs-vis.umd.min.js"></script>
-    <!-- Drawing utility -->
-    <script src='drawing.js'></script>
-    <!-- Import the main script file -->
-    <script src='main.js'></script>
+    <script src="main.js" type="module"></script>
 </body>
 
 </html>
