--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <!-- place all the scripts right before the body closing tag allows them to execute after the document has been loaded -->
     <!-- and we don't have to place our DOM selecting code inside window.onload -->
     <!-- Import TensorFlow.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
-    <!-- Import tfjs-vis -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.0.2/dist/tfjs-vis.umd.min.js"></script>
-    <script src="main.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.js"></script>
+
+    <script src="main.js" type="text/javascript"></script>
 </body>
 
 </html>
